--- a/portfolio.html
+++ b/portfolio.html
@@ -7,163 +7,176 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
+
     <link href="css/style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <a class="logo" href="index.html">Web<span class="highlightblack">Studio</span></a>
-      <nav>
-        <ul class="list">
-          <li><a class="link-up" href="index.html">Agencja</a></li>
-          <li>
-            <a class="link-up" href="portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="link-up" href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div>
-        <a class="link-up" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link-up" href="tel:48111111111">+48 111 111 111</a>
+      <div class="container border">
+        <div class="navi">
+          <div class="logo-up">
+            <a href="index.html">Web<span class="highlightblack">Studio</span></a>
+          </div>
+          <nav>
+            <ul class="navi-list">
+              <li><a class="navi-list-link" href="index.html">Agencja</a></li>
+              <li>
+                <a class="navi-list-link" href="portfolio.html">Portfolio</a>
+              </li>
+              <li><a class="navi-list-link" href="#">Kontakt</a></li>
+            </ul>
+          </nav>
+
+          <ul class="link-up-list">
+            <li><a class="link-up-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link-up-tel" href="tel:48111111111">+48 111 111 111</a></li>
+          </ul>
+        </div>
       </div>
     </header>
 
     <main>
-      <div>
-        <ul class="list">
-          <li><button class="buttons" type="button">Wszystkie</button></li>
-          <li><button class="buttons" type="button">Aplikacje</button></li>
-          <li><button class="buttons" type="button">Dizajn</button></li>
-          <li><button class="buttons" type="button">Marketing</button></li>
-          <li><button class="buttons" type="button">Strony</button></li>
-        </ul>
+      <div class="section container">
+        <div>
+          <ul class="buttons-list">
+            <li><button class="buttons" type="button">Wszystkie</button></li>
+            <li><button class="buttons" type="button">Strony</button></li>
+            <li><button class="buttons" type="button">Aplikacje</button></li>
+            <li><button class="buttons" type="button">Dizajn</button></li>
+            <li><button class="buttons" type="button">Marketing</button></li>
+          </ul>
+        </div>
+        <section>
+          <ul class="work-list">
+            <li>
+              <figure>
+                <img
+                  src="images/page.jpg"
+                  alt="Strona internetowa wyświetlana na laptopie"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Technocrack</p>
+                  <p class="desc">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="images/basket.jpg"
+                  alt="Grający koszykarze New Orlean i Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Grafika New Orlean vs Golden Star</p>
+                  <p class="desc">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="images/restaurant.jpg"
+                  alt="Logo Restauracji The Seafood"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Restauracja Seafood</p>
+                  <p class="desc">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/headphones.jpg" alt="Czarne słuchawki" width="370" height="294" />
+                <figcaption>
+                  <p class="term">Projekt Prime</p>
+                  <p class="desc">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/boxes.jpg" alt="Dwa pudełka" width="370" height="294" />
+                <figcaption>
+                  <p class="term">Projekt Boxes</p>
+                  <p class="desc">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="images/mac.jpg"
+                  alt="Strona internetowa wyświetlana na Macu"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Inspiration has no Borders</p>
+                  <p class="desc">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="images/magazine.jpg"
+                  alt="Czaspismo z nagłówkiem I am Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Magazyn Limited Edition</p>
+                  <p class="desc">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="images/label.jpg"
+                  alt="Biała etykieta z napisem LABEL TAG"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Projekt LAB</p>
+                  <p class="desc">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="images/buisness.jpg"
+                  alt="Laptop z aplikacją Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <figcaption>
+                  <p class="term">Growing Business</p>
+                  <p class="desc">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </section>
       </div>
-      <section>
-        <ul class="list">
-          <li>
-            <figure>
-              <img
-                src="images/page.jpg"
-                alt="Strona internetowa wyświetlana na laptopie"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Technocrack</p>
-                <p class="desc">Strona internetowa</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/basket.jpg"
-                alt="Grający koszykarze New Orlean i Golden Star"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Grafika New Orlean vs Golden Star</p>
-                <p class="desc">Dizajn</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/restaurant.jpg"
-                alt="Logo Restauracji The Seafood"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Restauracja Seafood</p>
-                <p class="desc">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img src="images/headphones.jpg" alt="Czarne słuchawki" width="370" height="294" />
-              <figcaption>
-                <p class="term">Projekt Prime</p>
-                <p class="desc">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img src="images/boxes.jpg" alt="Dwa pudełka" width="370" height="294" />
-              <figcaption>
-                <p class="term">Projekt Boxes</p>
-                <p class="desc">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/mac.jpg"
-                alt="Strona internetowa wyświetlana na Macu"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Inspiration has no Borders</p>
-                <p class="desc">Strona internetowa</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/magazine.jpg"
-                alt="Czaspismo z nagłówkiem I am Limited Edition"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Magazyn Limited Edition</p>
-                <p class="desc">Dizajn</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/label.jpg"
-                alt="Biała etykieta z napisem LABEL TAG"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Projekt LAB</p>
-                <p class="desc">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/buisness.jpg"
-                alt="Laptop z aplikacją Growing Business"
-                width="370"
-                height="294"
-              />
-              <figcaption>
-                <p class="term">Growing Business</p>
-                <p class="desc">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </section>
     </main>
 
-    <footer class="foot">
-      <a class="logo" href="index.html">Web<span class="highlightwhite">Studio</span></a>
-      <address>
+    <footer class="foot container">
+      <a class="logo-bottom" href="index.html">Web<span class="highlightwhite">Studio</span></a>
+
+      <address class="address">
         m. Warszawa, Aleje Jerozolimskie 21
         <a class="link-bottom" href="mailto:info@example.com">info@example.com</a>
         <a class="link-bottom" href="tel:48111111111">+48 111 111 111</a>
