--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <title>Studio</title>
   </head>
   <body>
-    <header>
-      <div class="container border">
+    <header class="border">
+      <div class="container">
         <div class="navi">
           <div class="logo-up">
             <a href="index.html">Web<span class="highlightblack">Studio</span></a>
@@ -36,128 +36,136 @@
             <li><a class="link-up-tel" href="tel:48111111111">+48 111 111 111</a></li>
           </ul>
         </div>
-        <div class="header section">
-          <h1 class="title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button class="order" type="button">Zamów usługe</button>
-        </div>
       </div>
     </header>
 
     <main>
-      <section class="section container">
-        <ul class="lorem-list">
-          <li>
-            <h2 class="lorem">LOREM IPSUM</h2>
-            <p class="loremipsum">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h2 class="lorem">LOREM IPSUM</h2>
-            <p class="loremipsum">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h2 class="lorem">LOREM IPSUM</h2>
-            <p class="loremipsum">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h2 class="lorem">LOREM IPSUM</h2>
-            <p class="loremipsum">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
+      <div class="header section">
+        <h1 class="title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button class="order" type="button">Zamów usługe</button>
+      </div>
+      <section class="section">
+        <div class="container">
+          <ul class="lorem-list">
+            <li>
+              <h2 class="lorem">LOREM IPSUM</h2>
+              <p class="loremipsum">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h2 class="lorem">LOREM IPSUM</h2>
+              <p class="loremipsum">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h2 class="lorem">LOREM IPSUM</h2>
+              <p class="loremipsum">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h2 class="lorem">LOREM IPSUM</h2>
+              <p class="loremipsum">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="section container">
-        <h3 class="secondtitle">Czym się zajmujemy</h3>
-        <ul class="wwd-list">
-          <li>
-            <img src="images/coding.jpg" alt="Programowanie" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images/testing.jpg" alt="Testowanie" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images/design.jpg" alt="Projektowanie" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h3 class="secondtitle">Czym się zajmujemy</h3>
+          <ul class="wwd-list">
+            <li>
+              <img src="images/coding.jpg" alt="Programowanie" width="370" height="294" />
+            </li>
+            <li>
+              <img src="images/testing.jpg" alt="Testowanie" width="370" height="294" />
+            </li>
+            <li>
+              <img src="images/design.jpg" alt="Projektowanie" width="370" height="294" />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="section container bg">
-        <h3 class="secondtitle bg">Nasz zespół</h3>
-        <ul class="team-list bg">
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/productDesigner.jpg"
-                alt="John Doe Product Designer"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/frontenDeveloper.jpg"
-                alt="John Doe Frontend Developer"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="team-card">
-              <img src="images/marketing.jpg" alt="John Doe Marketing" width="270" height="260" />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/uiDesigner.jpg"
-                alt="John Doe UI Designer"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+      <section class="section bg">
+        <div class="container">
+          <h3 class="secondtitle bg">Nasz zespół</h3>
+          <ul class="team-list bg">
+            <li>
+              <figure class="team-card">
+                <img
+                  src="images/productDesigner.jpg"
+                  alt="John Doe Product Designer"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job">Product Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure class="team-card">
+                <img
+                  src="images/frontenDeveloper.jpg"
+                  alt="John Doe Frontend Developer"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job">Frontend Developer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure class="team-card">
+                <img src="images/marketing.jpg" alt="John Doe Marketing" width="270" height="260" />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure class="team-card">
+                <img
+                  src="images/uiDesigner.jpg"
+                  alt="John Doe UI Designer"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job">UI Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="foot container">
-      <a class="logo-bottom" href="index.html">Web<span class="highlightwhite">Studio</span></a>
+    <footer class="foot">
+      <div class="container bg-dark">
+        <a class="logo-bottom" href="index.html">Web<span class="highlightwhite">Studio</span></a>
 
-      <address class="address">
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a class="link-bottom" href="mailto:info@example.com">info@example.com</a>
-        <a class="link-bottom" href="tel:48111111111">+48 111 111 111</a>
-      </address>
+        <address class="address">
+          m. Warszawa, Aleje Jerozolimskie 21
+          <a class="link-bottom" href="mailto:info@example.com">info@example.com</a>
+          <a class="link-bottom" href="tel:48111111111">+48 111 111 111</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
