--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div class="container border">
+    <header class="border">
+      <div class="container">
         <div class="navi">
           <div class="logo-up">
             <a href="index.html">Web<span class="highlightblack">Studio</span></a>
@@ -53,116 +53,116 @@
         <section>
           <ul class="work-list">
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/page.jpg"
                   alt="Strona internetowa wyświetlana na laptopie"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Technocrack</p>
                   <p class="desc">Strona internetowa</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/basket.jpg"
                   alt="Grający koszykarze New Orlean i Golden Star"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Grafika New Orlean vs Golden Star</p>
                   <p class="desc">Dizajn</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/restaurant.jpg"
                   alt="Logo Restauracji The Seafood"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Restauracja Seafood</p>
                   <p class="desc">Aplikacja</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img src="images/headphones.jpg" alt="Czarne słuchawki" width="370" height="294" />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Projekt Prime</p>
                   <p class="desc">Marketing</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img src="images/boxes.jpg" alt="Dwa pudełka" width="370" height="294" />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Projekt Boxes</p>
                   <p class="desc">Aplikacja</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/mac.jpg"
                   alt="Strona internetowa wyświetlana na Macu"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Inspiration has no Borders</p>
                   <p class="desc">Strona internetowa</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/magazine.jpg"
                   alt="Czaspismo z nagłówkiem I am Limited Edition"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Magazyn Limited Edition</p>
                   <p class="desc">Dizajn</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/label.jpg"
                   alt="Biała etykieta z napisem LABEL TAG"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Projekt LAB</p>
                   <p class="desc">Marketing</p>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="work-card">
                 <img
                   src="images/buisness.jpg"
                   alt="Laptop z aplikacją Growing Business"
                   width="370"
                   height="294"
                 />
-                <figcaption>
+                <figcaption class="desc-border">
                   <p class="term">Growing Business</p>
                   <p class="desc">Aplikacja</p>
                 </figcaption>
@@ -173,14 +173,16 @@
       </div>
     </main>
 
-    <footer class="foot container">
-      <a class="logo-bottom" href="index.html">Web<span class="highlightwhite">Studio</span></a>
+    <footer class="foot">
+      <div class="container bg-dark">
+        <a class="logo-bottom" href="index.html">Web<span class="highlightwhite">Studio</span></a>
 
-      <address class="address">
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a class="link-bottom" href="mailto:info@example.com">info@example.com</a>
-        <a class="link-bottom" href="tel:48111111111">+48 111 111 111</a>
-      </address>
+        <address class="address">
+          m. Warszawa, Aleje Jerozolimskie 21
+          <a class="link-bottom" href="mailto:info@example.com">info@example.com</a>
+          <a class="link-bottom" href="tel:48111111111">+48 111 111 111</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
